8214021: Create additional automated tests for jpackager
Submitten-by: almatvee
Reviewed-by: herrick. kcr